<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.danubetech</groupId>
	<artifactId>XDINinja</artifactId>
	<version>0.1-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>XDINinja</name>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.zenjava</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>8.2.0</version>
				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<mainClass>com.danubetech.xdininja.XDINinja</mainClass>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>webstart-maven-plugin</artifactId>
				<version>1.0-beta-6</version>
<!--				<executions>
					<execution>
						<goals>
							<goal>jnlp</goal>
						</goals>
					</execution>
				</executions>-->
				<dependencies>
					<dependency>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>keytool-api-1.7</artifactId>
						<version>1.5</version>
					</dependency>
				</dependencies>
				<configuration>
					<excludeTransitive>false</excludeTransitive>
					<libPath>lib</libPath>
					<codebase>http://192.168.1.101/XDINinja-swing-jnlp/</codebase>
					<jnlp>
						<outputFile>app.jnlp</outputFile>
						<mainClass>com.danubetech.xdininja.XDINinja</mainClass>
					</jnlp>
					<sign>
						<keystore>${basedir}/keystore</keystore>
						<keypass>password</keypass>
						<storepass>password</storepass>
						<alias>EmbeddedTomcatWebstart</alias>
						<dnameCn>CN</dnameCn>
						<dnameOu>OU</dnameOu>
						<dnameO>O</dnameO>
						<dnameL>L</dnameL>
						<dnameSt>S</dnameSt>
						<dnameC>C</dnameC>
						<verify>false</verify>
						<keystoreConfig>
							<delete>true</delete>
							<gen>true</gen>
						</keystoreConfig>
					</sign>
					<pack200>
						<enabled>false</enabled>
					</pack200>
					<gzip>true</gzip>
					<outputJarVersions>true</outputJarVersions>
					<verbose>true</verbose>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>XDI2</id>
			<name>XDI2-snapshots</name>
			<url>https://artifactory.xdi2.org/xdi2-snapshot-local</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.oracle</groupId>
			<artifactId>javafx</artifactId>
			<version>2.2</version>
			<systemPath>${java.home}/lib/ext/jfxrt.jar</systemPath>
			<scope>system</scope>
		</dependency>
		<dependency>
			<groupId>xdi2</groupId>
			<artifactId>xdi2-client-websocket</artifactId>
			<version>0.8-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>xdi2</groupId>
			<artifactId>xdi2-crypto-ec25519</artifactId>
			<version>0.8-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>

</project>
